--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     image: postgres:15-alpine
     restart: always
     environment:
-      - POSTGRES_USER=snake_user
-      - POSTGRES_PASSWORD=snake_password
-      - POSTGRES_DB=snake_game
+      - POSTGRES_USER=${POSTGRES_USER:-snake_user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-snake_password}
+      - POSTGRES_DB=${POSTGRES_DB:-snake_game}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U snake_user -d snake_game" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-snake_user} -d ${POSTGRES_DB:-snake_game}" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -20,9 +20,9 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - DATABASE_URL=postgresql://snake_user:snake_password@db:5432/snake_game
-      - SECRET_KEY=production-secret-key-change-this
-      - ACCESS_TOKEN_EXPIRE_MINUTES=60
+      - DATABASE_URL=${DATABASE_URL:-postgresql://snake_user:snake_password@db:5432/snake_game}
+      - SECRET_KEY=${SECRET_KEY:-production-secret-key-change-this}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
     depends_on:
       db:
         condition: service_healthy
