--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,9 @@ services:
       - "8080:8080"
     depends_on:
       - backend
+    environment:
+      - BACKEND_HOST=backend
+      - BACKEND_PORT=8000
 
 volumes:
   postgres_data:
