--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,8 +16,13 @@ server {
     }
 
     # Proxy API requests to backend
+    # Proxy API requests to backend
+    # Use Docker's internal DNS resolver (injected at runtime) to handle dynamic backend IPs
+    resolver ${RESOLVER} valid=30s;
+    set $backend_upstream http://${BACKEND_HOST}:${BACKEND_PORT};
+
     location /api/ {
-        proxy_pass http://${BACKEND_HOST}:${BACKEND_PORT}/api/;
+        proxy_pass $backend_upstream/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
