updated some code and pushing to production

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8080;
+    listen ${PORT};
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
@@ -19,7 +19,7 @@ server {
     # Proxy API requests to backend
     # Use Docker's internal DNS resolver (injected at runtime) to handle dynamic backend IPs
     resolver ${RESOLVER} valid=30s;
-    set $backend_upstream http://${BACKEND_HOST}:${BACKEND_PORT};
+    set $backend_upstream ${BACKEND_PROTOCOL}://${BACKEND_HOST}:${BACKEND_PORT};
 
     location /api/ {
         proxy_pass $backend_upstream/api/;
@@ -28,6 +28,7 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_ssl_server_name on;
     }
 
     # Health check
