--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,9 +26,10 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        proxy_set_header Host ${BACKEND_HOST};
         proxy_cache_bypass $http_upgrade;
         proxy_ssl_server_name on;
+        proxy_ssl_name ${BACKEND_HOST};
     }
 
     # Health check
