--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+    
+    - name: Set up Docker Compose
+      uses: docker/compose-action@v2
 
     - name: Create .env file
       run: cp .env.example .env
