--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen ${PORT};
+    listen ${PORT} default_server;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
