--- a/render.yaml
+++ b/render.yaml
@@ -28,6 +28,8 @@ services:
         value: https
       - key: BACKEND_PORT
         value: 443
+      - key: PORT
+        value: 8080
 
 databases:
   - name: snake-db
