--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,10 @@ jobs:
       uses: docker/setup-buildx-action@v3
     
     - name: Set up Docker Compose
-      uses: docker/compose-action@v2
+      uses: docker/setup-compose-action@v2
+      with:
+        version: 'latest'
+
 
     - name: Create .env file
       run: cp .env.example .env
