--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -41,5 +41,5 @@ USER nginx
 # Expose port 8080 (must match listen port in nginx.conf)
 EXPOSE 8080
 
-# Extract the nameserver from /etc/resolv.conf and substitute it into the nginx config
-CMD ["/bin/sh", "-c", "export RESOLVER=$(awk 'BEGIN{ORS=\"\"} /^nameserver/{print $2; exit}' /etc/resolv.conf) && envsubst '${BACKEND_HOST} ${BACKEND_PORT} ${BACKEND_PROTOCOL} ${RESOLVER} ${PORT}' < /etc/nginx/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+# Substitute PORT variable and start nginx
+CMD ["/bin/sh", "-c", "envsubst '${PORT}' < /etc/nginx/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
