--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,20 +16,14 @@ server {
     }
 
     # Proxy API requests to backend
-    # Proxy API requests to backend
-    # Use Docker's internal DNS resolver (injected at runtime) to handle dynamic backend IPs
-    resolver ${RESOLVER} valid=30s;
-    set $backend_upstream ${BACKEND_PROTOCOL}://${BACKEND_HOST}:${BACKEND_PORT};
-
     location /api/ {
-        proxy_pass $backend_upstream/api/;
+        proxy_pass https://snake-backend-a3io.onrender.com/api/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host ${BACKEND_HOST};
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Host snake-backend-a3io.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_ssl_server_name on;
-        proxy_ssl_name ${BACKEND_HOST};
     }
 
     # Health check
