--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,9 +17,9 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass https://snake-backend-a3io.onrender.com/api/;
+        proxy_pass ${BACKEND_URL}/api/;
         proxy_http_version 1.1;
-        proxy_set_header Host snake-backend-a3io.onrender.com;
+        proxy_set_header Host ${BACKEND_HOST};
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
