fixed the problem

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -42,5 +42,5 @@ USER nginx
 EXPOSE 8080
 
 # Substitute environment variables and start nginx
-# BACKEND_URL is constructed from BACKEND_HOST at runtime
-CMD ["/bin/sh", "-c", "export BACKEND_URL=https://${BACKEND_HOST} && envsubst '${PORT} ${BACKEND_URL} ${BACKEND_HOST}' < /etc/nginx/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+# Ensure BACKEND_HOST has full domain and construct BACKEND_URL
+CMD ["/bin/sh", "-c", "case \"${BACKEND_HOST}\" in *.onrender.com) ;; *) export BACKEND_HOST=\"${BACKEND_HOST}.onrender.com\";; esac && export BACKEND_URL=https://${BACKEND_HOST} && envsubst '${PORT} ${BACKEND_URL} ${BACKEND_HOST}' < /etc/nginx/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
