--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,173 @@
-name: CI
+name: CI/CD
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: ["main", "master"]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: ["main", "master"]
+
+env:
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
 
 jobs:
-  docker-compose-test:
+  # Backend unit tests - run in Docker to match production environment
+  backend-tests:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Set up Docker Compose
-      uses: docker/setup-compose-action
-      with:
-        version: 'latest'
+      - name: Create .env file
+        run: cp .env.example .env
 
+      - name: Build backend test image
+        run: |
+          docker build -t snake-backend-test \
+            --target builder \
+            -f backend/Dockerfile.test \
+            backend/
 
-    - name: Create .env file
-      run: cp .env.example .env
+      - name: Run backend tests
+        run: |
+          docker run --rm snake-backend-test pytest -v
 
-    - name: Verify Docker Compose Config
-      run: docker-compose config
+  # Frontend unit tests - run in Docker to match production environment
+  frontend-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Build and Start Containers
-      run: docker-compose up -d --build
+      - name: Build frontend test image
+        run: |
+          docker build -t snake-frontend-test \
+            -f frontend/Dockerfile.test \
+            frontend/
 
-    - name: Check Container Status
-      run: docker-compose ps
+      - name: Run frontend unit tests
+        run: |
+          docker run --rm snake-frontend-test npm test -- --run
 
-    - name: Check Backend Logs (if failure)
-      if: failure()
-      run: docker-compose logs backend
+  # Integration tests - test backend API with database
+  integration-tests:
+    runs-on: ubuntu-latest
+    needs: [backend-tests]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Create .env file
+        run: cp .env.example .env
+
+      - name: Start services
+        run: docker compose up -d --build db backend
+
+      - name: Wait for backend to be ready
+        run: |
+          echo "Waiting for backend to be healthy..."
+          for i in {1..30}; do
+            if curl -s http://localhost:8000/ > /dev/null 2>&1; then
+              echo "Backend is ready!"
+              break
+            fi
+            echo "Attempt $i: Backend not ready yet..."
+            sleep 2
+          done
+
+      - name: Run API health check
+        run: |
+          curl -f http://localhost:8000/ || exit 1
+          curl -f http://localhost:8000/api/scores?limit=5 || exit 1
+
+      - name: Show logs on failure
+        if: failure()
+        run: docker compose logs
+
+      - name: Cleanup
+        if: always()
+        run: docker compose down -v
+
+  # E2E tests - full stack with Playwright
+  e2e-tests:
+    runs-on: ubuntu-latest
+    needs: [frontend-tests, integration-tests]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Create .env file
+        run: cp .env.example .env
+
+      - name: Start all services
+        run: docker compose up -d --build
+
+      - name: Wait for services to be ready
+        run: |
+          echo "Waiting for frontend to be healthy..."
+          for i in {1..30}; do
+            if curl -s http://localhost:8080/ > /dev/null 2>&1; then
+              echo "Frontend is ready!"
+              break
+            fi
+            echo "Attempt $i: Frontend not ready yet..."
+            sleep 2
+          done
+
+      - name: Verify all services are running
+        run: |
+          docker compose ps
+          curl -f http://localhost:8000/ || exit 1
+          curl -f http://localhost:8080/ || exit 1
+
+      - name: Set up Node.js 18
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm ci
+
+      - name: Install Playwright browsers
+        working-directory: frontend
+        run: npx playwright install --with-deps chromium
+
+      - name: Run E2E tests
+        working-directory: frontend
+        env:
+          PLAYWRIGHT_BASE_URL: http://localhost:8080
+          VITE_API_BASE_URL: http://localhost:8080/api
+        run: npm run test:e2e
+
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: playwright-report
+          path: frontend/playwright-report/
+          retention-days: 7
+
+      - name: Show logs on failure
+        if: failure()
+        run: docker compose logs
+
+      - name: Cleanup
+        if: always()
+        run: docker compose down -v
+
+  # Deploy to Render - only on main branch after all tests pass
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [e2e-tests]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Deploy to Render
+        env:
+          RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          if [ -z "$RENDER_DEPLOY_HOOK_URL" ]; then
+            echo "RENDER_DEPLOY_HOOK_URL secret not set. Skipping deployment."
+            echo "To enable deployment, add your Render deploy hook URL as a secret."
+            exit 0
+          fi
+          curl -X POST "$RENDER_DEPLOY_HOOK_URL"
+          echo "Deployment triggered successfully!"
