--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,8 @@ services:
       - backend
     environment:
       - BACKEND_HOST=backend
-      - BACKEND_PORT=8000
+      - BACKEND_URL=http://backend:8000
+      - PORT=8080
 
 volumes:
   postgres_data:
