--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,21 +30,26 @@ jobs:
         run: |
           docker run --rm -t snake-backend-test pytest -v --tb=short
 
-  # Frontend unit tests - run in Docker to match production environment
+  # Frontend unit tests - run directly on Node.js
   frontend-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build frontend test image
-        run: |
-          docker build -t snake-frontend-test \
-            -f frontend/Dockerfile.test \
-            frontend/
+      - name: Set up Node.js 18
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm ci
 
       - name: Run frontend unit tests
-        run: |
-          docker run --rm -t snake-frontend-test npm test -- --run --reporter=verbose
+        working-directory: frontend
+        run: npm test -- --run --reporter=verbose
 
   # Integration tests - test backend API with database
   integration-tests:
