--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
         working-directory: frontend
         env:
           VITE_API_BASE_URL: http://localhost:8000/api
-        run: npm test -- --run --reporter=verbose
+        run: npm test
 
       - name: Show logs on failure
         if: failure()
